# rusty-OLLAMA

./: README.md
everything/: Cargo.toml
everything/rusty-ollama/: Cargo.toml
everything/rusty-ollama/rusty-ollama/: Cargo.toml  Dioxus.toml
everything/src/: main.rs  request.rs
