[package]
name = "everything"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3"
serde_json = "1.0.117"

egui = "0.24.1"
eframe = { version = "0.24.1", features = ["persistence"] }
tokio = { version = "1.0", features = ["full"] }
winapi = { version = "0.3", features = ["winuser", "windef", "libloaderapi"] }