[package]
name = "rusty-ollama"
version = "0.1.0"
authors = ["mbn <66748817+mbn-code@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["desktop", "router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
dioxus-desktop = "0.5.6"
